[package]
name = "e2e-cc"
version = "0.1.0"
authors = ["Sam Sieber <swsieber@gmail.com>"]

[dependencies]
xml-rs = "0.8"
memmap = "0.7"
lcov-parser = "3"
ecmascript = "0.1"
serde_json = "1"
serde = "1"
serde_derive = "1"
vlq = "0.5"
globset = "0.4"
structopt= "0.2"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"