[package]
name = "atlas-coverage-core"
version = "0.1.0"
authors = ["Sam Sieber <swsieber@gmail.com>"]
license = "MIT"
description = "Logic for the atlas-coverage tool"
edition = "2018"

[dependencies]
xml-rs = "0.8"
memmap = "0.7"
lcov-parser = "3"
ecmascript = "0.1"
serde_json = "1"
serde = "1"
serde_derive = "1"
vlq = "0.5"
globset = "0.4"
